feat: support save browse records
