# internal/api/routes.go
@@ -43,6 +43,7 @@ func (c *APIClient) SetupRoutes() {
 	c.engine.GET("/ws/channels", c.channels.HandleChannelsWebsocket)
 	c.engine.POST("/api/browse_history/create", c.handleCreateBrowseHistory)
 	c.engine.POST("/api/browse_history/list", c.handleFetchBrowseHistoryList)
+	c.engine.GET("/api/content/list", c.handleFetchContentList)
 	c.engine.GET("/api/task/list", c.handleFetchTaskList)
 	c.engine.GET("/api/task/profile", c.handleFetchTaskProfile)
 	c.engine.POST("/api/task/create", c.handleCreateFeedDownloadTask)
@@ -57,28 +58,28 @@ func (c *APIClient) SetupRoutes() {
 	c.engine.POST("/api/task/clear", c.handleClearTasks)
 	c.engine.GET("/api/file", c.handleFetchFile)
 
-	c.engine.POST("/download_task/list", c.handleCompatDownloadTaskList)
-	c.engine.POST("/download_task/start", c.handleCompatDownloadTaskStart)
-	c.engine.POST("/download_task/profile", c.handleCompatDownloadTaskProfile)
-	c.engine.POST("/download_task/create", c.handleCompatDownloadTaskCreate)
-	c.engine.POST("/download_task/batch_create", c.handleCompatDownloadTaskBatchCreate)
-	c.engine.POST("/download_task/delete", c.handleCompatDownloadTaskDelete)
-	c.engine.POST("/download_task/retry", c.handleCompatDownloadTaskRetry)
-	c.engine.POST("/download_task/pause_all", c.handleCompatDownloadTaskPauseAll)
-	c.engine.POST("/download_task/start_all", c.handleCompatDownloadTaskStartAll)
-	c.engine.POST("/download_task/highlight_file", c.handleCompatDownloadTaskHighlightFile)
-	c.engine.GET("/download_task/play", c.handleCompatDownloadTaskPlay)
+	c.engine.POST("/api/download_task/list", c.handleCompatDownloadTaskList)
+	c.engine.POST("/api/download_task/start", c.handleCompatDownloadTaskStart)
+	c.engine.POST("/api/download_task/profile", c.handleCompatDownloadTaskProfile)
+	c.engine.POST("/api/download_task/create", c.handleCompatDownloadTaskCreate)
+	c.engine.POST("/api/download_task/batch_create", c.handleCompatDownloadTaskBatchCreate)
+	c.engine.POST("/api/download_task/delete", c.handleCompatDownloadTaskDelete)
+	c.engine.POST("/api/download_task/retry", c.handleCompatDownloadTaskRetry)
+	c.engine.POST("/api/download_task/pause_all", c.handleCompatDownloadTaskPauseAll)
+	c.engine.POST("/api/download_task/start_all", c.handleCompatDownloadTaskStartAll)
+	c.engine.POST("/api/download_task/highlight_file", c.handleCompatDownloadTaskHighlightFile)
+	c.engine.GET("/api/download_task/play", c.handleCompatDownloadTaskPlay)
 
-	c.engine.POST("/browse_history/create", c.handleCreateBrowseHistory)
-	c.engine.POST("/browse_history/list", c.handleFetchBrowseHistoryList)
+	c.engine.POST("/api/browse_history/create", c.handleCreateBrowseHistory)
+	c.engine.POST("/api/browse_history/list", c.handleFetchBrowseHistoryList)
 
-	c.engine.GET("/influencers", c.handleCompatInfluencerList)
-	c.engine.GET("/influencers/:id", c.handleCompatInfluencerGet)
-	c.engine.POST("/influencers", c.handleCompatInfluencerCreate)
-	c.engine.PUT("/influencers/:id", c.handleCompatInfluencerUpdate)
+	c.engine.GET("/api/influencers", c.handleCompatInfluencerList)
+	c.engine.GET("/api/influencers/:id", c.handleCompatInfluencerGet)
+	c.engine.POST("/api/influencers", c.handleCompatInfluencerCreate)
+	c.engine.PUT("/api/influencers/:id", c.handleCompatInfluencerUpdate)
 
-	c.engine.POST("/account/list", c.handleCompatAccountList)
-	c.engine.POST("/account/synchronize", c.handleCompatAccountSynchronize)
+	c.engine.POST("/api/account/list", c.handleCompatAccountList)
+	c.engine.POST("/api/account/synchronize", c.handleCompatAccountSynchronize)
 
 	c.engine.POST("/video/list", c.handleCompatVideoList)
 
